Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1022,7 +1022,12 @@
     "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
-    "])"
+    "])\n",
+    "\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
+    "plotly.offline.iplot([\n",
+    "    trace\n",
+    "])\n"
    ]
   },
   {
