--- a/index.ipynb
+++ b/index.ipynb
@@ -1024,7 +1024,7 @@
     "    trace\n",
     "])\n",
     "\n",
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
+    "trace = {'x': [1, 3, 4], 'y': [1, 2, 3, 4]}\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
     "])\n"
