Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1902,9 +1902,7 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    pass\n",
-    "\n",
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
+    "    return trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
     "])\n"
