--- a/index.ipynb
+++ b/index.ipynb
@@ -1903,6 +1903,7 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    return trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
+    "trace = {'x': [1, 3, 2], 'y': [1, 2, 5]}\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
     "])\n"
