--- a/index.ipynb
+++ b/index.ipynb
@@ -1897,16 +1897,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-ecd44ab597c5>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-ecd44ab597c5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return trace = {'x': [1, 3, 2], 'y': [1, 2, 5]}\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    return trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
-    "trace = {'x': [1, 3, 2], 'y': [1, 2, 5]}\n",
+    "    return trace = {'x': [1, 3, 2], 'y': [1, 2, 5]}\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
-    "])\n"
+    "])"
    ]
   },
   {
