--- a/index.ipynb
+++ b/index.ipynb
@@ -1897,21 +1897,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-9fcdf8e17890>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-7-49282ae5f470>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-9fcdf8e17890>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return trace {'x': [1, 3, 2], 'y': [1, 2, 5]}\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-49282ae5f470>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return trace{'x': [1, 3, 2], 'y': [1, 2, 5]}\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    return trace{'x': [1, 3, 2], 'y': [1, 2, 5]}\n",
+    "    return trace ['x': [1, 3, 2], 'y': [1, 2, 5]\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
     "])"
