--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2028,9 +2028,7 @@
    "outputs": [],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "     pass\n",
-    "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "     return {'x': x_values, 'y': y_values, 'mode': mode, 'name': name}"
+    "     pass"
    ]
   },
   {
