--- a/index.ipynb
+++ b/index.ipynb
@@ -2101,7 +2101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trace2_values9[1,2,3]\n",
+    "trace2_values9([1, 2, 3], \n",
     "# trace2 = trace_values([1, 2, 3], [2, 4, 5], 'lines', 'line trace')\n",
     "# plot({'data': [trace2]})"
    ]
