Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2997,7 +2997,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trace0 = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], \n",
+    "trace0 = {'x': [1, 2, 3], 'y': [1, 2, 3, 4], \n",
+    "          trace_values([1, 2, 3], [2, 4, 5], 'lines', 'line trace')\n",
     "          'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}, \n",
     "          'name': 'Some dots'}\n",
     "trace1 = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
