Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3000,7 +3000,7 @@
     "trace0 = {'x': [1, 2, 3], 'y': [2, 4, 5], \n",
     "          'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}, \n",
     "          'name': 'Some dots'}\n",
-    "trace1 = {'x': [1, 2, 3], 'y': [2, 4, 5], \n",
+    "trace1 = {'x': [1, 2, ], 'y': [3, 5, 7, 9], \n",
     "          'marker': {'color': 'blue'},\n",
     "          'name': 'Our nice line'}\n",
     "plotly.offline.iplot([\n",
